<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:id="@+id/appName"
        android:textSize="40dp"
        android:layout_above="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starGame"
        android:id="@+id/startButton"
        android:onClick="startGameMethod"
        android:layout_above="@+id/ruleButton"
        android:layout_alignStart="@+id/scoresButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule"
        android:id="@+id/ruleButton"
        android:onClick="ruleMethod"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/scoresButton"
        android:onClick="scoresMethod"
        android:layout_below="@+id/ruleButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:id="@+id/settingButton"
        android:onClick="settingMethod"
        android:layout_below="@+id/scoresButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
